Small style fixes and code prettification

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  
+
   <title>Document</title>
 </head>
+
 <body>
   <header class="bg-light shadow-sm">
     <button id="menu-toggle" class="btn btn-primary m-1">Menu</button>
@@ -86,29 +89,88 @@
   </nav>
 
   <main>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mi diam, varius sit amet diam efficitur, facilisis accumsan massa. Phasellus quis malesuada metus. Etiam lorem dolor, elementum vitae orci facilisis, convallis viverra ipsum. Sed finibus odio ut lacus accumsan, ac accumsan neque gravida. Mauris at lorem ligula. Proin accumsan massa leo, quis pellentesque elit finibus vel. Aenean ornare eros eget orci lobortis lobortis at pulvinar neque. Vestibulum venenatis, felis sed eleifend maximus, turpis sem placerat elit, ac sollicitudin erat dui nec lacus. Suspendisse potenti. Duis at elementum risus. Cras sit amet ante pretium, elementum arcu sed, dignissim odio. Cras sed tempus nibh, vel blandit nunc. Nulla ut elementum magna. Integer blandit ullamcorper fringilla. Morbi ut semper dolor, id ornare odio. Vestibulum justo quam, consequat ut volutpat sit amet, scelerisque sit amet lectus.
-
-    Integer vel lorem eu lacus pharetra congue nec ut lacus. Maecenas semper dui neque, ac sagittis quam sagittis eu. Aliquam posuere id quam nec laoreet. Morbi eu ligula ac metus dictum tincidunt porttitor eget tellus. Mauris efficitur sem nunc, non feugiat augue posuere eget. In vitae risus metus. Donec arcu mi, pharetra id mollis sit amet, tincidunt quis est. Nulla placerat scelerisque congue. Nulla suscipit arcu quis velit fringilla, sit amet blandit ipsum bibendum. In interdum dapibus lacinia. Aenean nec elit sed diam bibendum sagittis vel vitae lectus. Fusce et sodales neque. Integer ullamcorper aliquam felis, consequat tristique sem laoreet vitae. Integer fringilla tempus justo vel sodales. Nam placerat vestibulum fermentum.
-
-    Aliquam consectetur at mauris a tempus. Nunc eu mauris nec ex maximus accumsan. Vestibulum tincidunt pellentesque nibh, et efficitur mauris imperdiet quis. Aenean viverra id elit id vestibulum. Nullam eget dolor neque. Vivamus eget eros sagittis erat condimentum convallis eu et orci. Morbi purus risus, dignissim ac tincidunt in, commodo quis tortor.
-
-    In commodo convallis ante, ut dictum mauris placerat non. Nunc a laoreet lacus. Sed sollicitudin orci vel consectetur fermentum. Vivamus scelerisque quis mi ultrices vehicula. Aenean pharetra malesuada euismod. Duis id lorem sit amet dolor mattis consectetur. Donec ullamcorper orci tincidunt nisl porta tristique. Praesent at interdum ipsum. Aliquam semper velit sit amet vehicula fermentum. Donec eget ante id odio elementum mollis ut eu lorem. Vivamus faucibus nisl sollicitudin nulla blandit iaculis.
-
-    Praesent ullamcorper erat in magna convallis, a blandit est aliquam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque vulputate velit ut est ornare, id rutrum odio vulputate. Ut pretium massa ac turpis congue, at scelerisque lorem aliquam. Integer mauris libero, efficitur id mauris at, volutpat tincidunt orci. Donec egestas euismod dolor non vehicula. Praesent sodales molestie sem. Duis sed sapien non lacus finibus consequat ut ac ex. Aenean efficitur placerat risus, quis molestie nibh laoreet nec.
-
-    Nam viverra imperdiet ipsum ut mattis. Ut cursus accumsan libero at elementum. Nam vulputate, velit sed finibus aliquet, nunc elit suscipit libero, non pellentesque elit dolor ut magna. Sed eget pretium eros, sed lobortis risus. In ac dui bibendum, pretium dui eu, iaculis velit. Mauris consectetur lobortis nisi, nec hendrerit turpis placerat non. Sed rutrum massa vitae erat mattis, eget ornare libero porttitor. Cras tempus est ac gravida consequat. Nam rhoncus ullamcorper orci a suscipit. Nam vitae diam ac felis ultricies mattis ut ac sem. Etiam quis turpis tincidunt, aliquet nisi et, faucibus massa. Mauris feugiat tincidunt augue, a laoreet risus imperdiet eget. Suspendisse quis ligula quis justo sagittis ullamcorper. Nulla nisl tortor, pretium at velit ac, ultrices blandit dolor.
-
-    Ut sit amet venenatis dui. Sed lacus purus, ultrices quis lacus aliquam, suscipit ornare est. Praesent sit amet molestie arcu. Pellentesque vel lorem efficitur, egestas dolor id, posuere mi. Sed condimentum iaculis libero, a blandit purus dignissim eu. Ut cursus, justo id tempor pharetra, lacus nulla ornare nulla, eu venenatis lectus lorem ut dui. Donec pellentesque non enim vitae pellentesque. Fusce id ipsum tristique, placerat nibh non, lobortis ipsum.
-
-    Etiam pretium ante et felis fermentum, eu suscipit nisl tempus. Nullam at blandit magna. In augue magna, egestas vel lectus sit amet, rutrum suscipit ante. Morbi pulvinar dui sed orci pretium mattis. Phasellus consequat, arcu a iaculis sollicitudin, felis mi volutpat lorem, quis vehicula velit ante quis arcu. Quisque nec pulvinar lacus. Donec maximus magna non mi lobortis, eget consectetur ipsum blandit. Aliquam at sem eget est pellentesque tincidunt. Quisque volutpat ex vel justo mollis porta.
-
-    Sed nec velit tincidunt, maximus tellus a, sollicitudin lorem. Ut dapibus tincidunt mattis. Sed feugiat lacus at ex dignissim lacinia. Morbi elementum hendrerit risus ut semper. Nunc sapien nibh, cursus eu lorem vitae, maximus luctus orci. Mauris pellentesque ut odio et sodales. Praesent placerat velit risus, eget hendrerit sapien tincidunt eget. Vestibulum eu velit odio. Nullam ac lorem in enim tempus dictum sit amet sed diam. Fusce interdum eget nunc sit amet vehicula.
-
-    In hac habitasse platea dictumst. Sed ut justo sagittis velit suscipit aliquam et vitae quam. Pellentesque placerat libero eget turpis volutpat egestas. Pellentesque ut nulla ultricies, ultricies turpis vitae, pellentesque sem. Donec sed efficitur urna. Nullam varius dictum purus, tempus pulvinar dolor molestie quis. Morbi sed enim pretium, laoreet ante finibus, gravida ante. Fusce varius dolor vel ex lobortis, at commodo erat imperdiet. Etiam gravida justo quis turpis tempor tincidunt.
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mi diam, varius sit amet diam efficitur, facilisis
+      accumsan massa. Phasellus quis malesuada metus. Etiam lorem dolor, elementum vitae orci facilisis, convallis
+      viverra ipsum. Sed finibus odio ut lacus accumsan, ac accumsan neque gravida. Mauris at lorem ligula. Proin
+      accumsan massa leo, quis pellentesque elit finibus vel. Aenean ornare eros eget orci lobortis lobortis at pulvinar
+      neque. Vestibulum venenatis, felis sed eleifend maximus, turpis sem placerat elit, ac sollicitudin erat dui nec
+      lacus. Suspendisse potenti. Duis at elementum risus. Cras sit amet ante pretium, elementum arcu sed, dignissim
+      odio. Cras sed tempus nibh, vel blandit nunc. Nulla ut elementum magna. Integer blandit ullamcorper fringilla.
+      Morbi ut semper dolor, id ornare odio. Vestibulum justo quam, consequat ut volutpat sit amet, scelerisque sit amet
+      lectus.
+    </p>
+    <p>
+      Integer vel lorem eu lacus pharetra congue nec ut lacus. Maecenas semper dui neque, ac sagittis quam sagittis eu.
+      Aliquam posuere id quam nec laoreet. Morbi eu ligula ac metus dictum tincidunt porttitor eget tellus. Mauris
+      efficitur sem nunc, non feugiat augue posuere eget. In vitae risus metus. Donec arcu mi, pharetra id mollis sit
+      amet, tincidunt quis est. Nulla placerat scelerisque congue. Nulla suscipit arcu quis velit fringilla, sit amet
+      blandit ipsum bibendum. In interdum dapibus lacinia. Aenean nec elit sed diam bibendum sagittis vel vitae lectus.
+      Fusce et sodales neque. Integer ullamcorper aliquam felis, consequat tristique sem laoreet vitae. Integer
+      fringilla tempus justo vel sodales. Nam placerat vestibulum fermentum.
+    </p>
+    <p>
+      Aliquam consectetur at mauris a tempus. Nunc eu mauris nec ex maximus accumsan. Vestibulum tincidunt pellentesque
+      nibh, et efficitur mauris imperdiet quis. Aenean viverra id elit id vestibulum. Nullam eget dolor neque. Vivamus
+      eget eros sagittis erat condimentum convallis eu et orci. Morbi purus risus, dignissim ac tincidunt in, commodo
+      quis tortor.
+    </p>
+    <p>
+      In commodo convallis ante, ut dictum mauris placerat non. Nunc a laoreet lacus. Sed sollicitudin orci vel
+      consectetur fermentum. Vivamus scelerisque quis mi ultrices vehicula. Aenean pharetra malesuada euismod. Duis id
+      lorem sit amet dolor mattis consectetur. Donec ullamcorper orci tincidunt nisl porta tristique. Praesent at
+      interdum ipsum. Aliquam semper velit sit amet vehicula fermentum. Donec eget ante id odio elementum mollis ut eu
+      lorem. Vivamus faucibus nisl sollicitudin nulla blandit iaculis.
+    </p>
+    <p>
+      Praesent ullamcorper erat in magna convallis, a blandit est aliquam. Interdum et malesuada fames ac ante ipsum
+      primis in faucibus. Pellentesque vulputate velit ut est ornare, id rutrum odio vulputate. Ut pretium massa ac
+      turpis congue, at scelerisque lorem aliquam. Integer mauris libero, efficitur id mauris at, volutpat tincidunt
+      orci. Donec egestas euismod dolor non vehicula. Praesent sodales molestie sem. Duis sed sapien non lacus finibus
+      consequat ut ac ex. Aenean efficitur placerat risus, quis molestie nibh laoreet nec.
+    </p>
+    <p>
+      Nam viverra imperdiet ipsum ut mattis. Ut cursus accumsan libero at elementum. Nam vulputate, velit sed finibus
+      aliquet, nunc elit suscipit libero, non pellentesque elit dolor ut magna. Sed eget pretium eros, sed lobortis
+      risus. In ac dui bibendum, pretium dui eu, iaculis velit. Mauris consectetur lobortis nisi, nec hendrerit turpis
+      placerat non. Sed rutrum massa vitae erat mattis, eget ornare libero porttitor. Cras tempus est ac gravida
+      consequat. Nam rhoncus ullamcorper orci a suscipit. Nam vitae diam ac felis ultricies mattis ut ac sem. Etiam quis
+      turpis tincidunt, aliquet nisi et, faucibus massa. Mauris feugiat tincidunt augue, a laoreet risus imperdiet eget.
+      Suspendisse quis ligula quis justo sagittis ullamcorper. Nulla nisl tortor, pretium at velit ac, ultrices blandit
+      dolor.
+    </p>
+    <p>
+      Ut sit amet venenatis dui. Sed lacus purus, ultrices quis lacus aliquam, suscipit ornare est. Praesent sit amet
+      molestie arcu. Pellentesque vel lorem efficitur, egestas dolor id, posuere mi. Sed condimentum iaculis libero, a
+      blandit purus dignissim eu. Ut cursus, justo id tempor pharetra, lacus nulla ornare nulla, eu venenatis lectus
+      lorem ut dui. Donec pellentesque non enim vitae pellentesque. Fusce id ipsum tristique, placerat nibh non,
+      lobortis ipsum.
+    </p>
+    <p>
+      Etiam pretium ante et felis fermentum, eu suscipit nisl tempus. Nullam at blandit magna. In augue magna, egestas
+      vel lectus sit amet, rutrum suscipit ante. Morbi pulvinar dui sed orci pretium mattis. Phasellus consequat, arcu a
+      iaculis sollicitudin, felis mi volutpat lorem, quis vehicula velit ante quis arcu. Quisque nec pulvinar lacus.
+      Donec maximus magna non mi lobortis, eget consectetur ipsum blandit. Aliquam at sem eget est pellentesque
+      tincidunt. Quisque volutpat ex vel justo mollis porta.
+    </p>
+    <p>
+      Sed nec velit tincidunt, maximus tellus a, sollicitudin lorem. Ut dapibus tincidunt mattis. Sed feugiat lacus at
+      ex dignissim lacinia. Morbi elementum hendrerit risus ut semper. Nunc sapien nibh, cursus eu lorem vitae, maximus
+      luctus orci. Mauris pellentesque ut odio et sodales. Praesent placerat velit risus, eget hendrerit sapien
+      tincidunt eget. Vestibulum eu velit odio. Nullam ac lorem in enim tempus dictum sit amet sed diam. Fusce interdum
+      eget nunc sit amet vehicula.
+    </p>
+    <p>
+      In hac habitasse platea dictumst. Sed ut justo sagittis velit suscipit aliquam et vitae quam. Pellentesque
+      placerat libero eget turpis volutpat egestas. Pellentesque ut nulla ultricies, ultricies turpis vitae,
+      pellentesque sem. Donec sed efficitur urna. Nullam varius dictum purus, tempus pulvinar dolor molestie quis. Morbi
+      sed enim pretium, laoreet ante finibus, gravida ante. Fusce varius dolor vel ex lobortis, at commodo erat
+      imperdiet. Etiam gravida justo quis turpis tempor tincidunt.
+    </p>
   </main>
-  
+
   <div id="cookie-popup">Cookie popup</div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
