Fix reletive links in github pages

--- a/vh-fix/index.html
+++ b/vh-fix/index.html
@@ -16,8 +16,8 @@
     <button id="menu-toggle" class="btn btn-primary m-1">Menu</button>
   </header>
   <nav id="main-navigation" class="bg-light">
-    <a href="/vh-fix" class="btn btn-primary w-100 shadow-sm">Fix vh units, thanks.</a>
-    <a href="/" class="btn btn-primary w-100 shadow-sm">Use native vh units.</a>
+    <a href="./" class="btn btn-primary w-100 shadow-sm">Fix vh units, thanks.</a>
+    <a href="../" class="btn btn-primary w-100 shadow-sm">Use native vh units.</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">Blog (demo button)</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">About (demo button)</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">Contact (demo button)</a>
