--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <title>Document</title>
 </head>
@@ -16,8 +16,8 @@
     <button id="menu-toggle" class="btn btn-primary m-1">Menu</button>
   </header>
   <nav id="main-navigation" class="bg-light">
-    <a href="/vh-fix" class="btn btn-primary w-100 shadow-sm">Fix vh units, thanks.</a>
-    <a href="/" class="btn btn-primary w-100 shadow-sm">Use native vh units.</a>
+    <a href="./vh-fix" class="btn btn-primary w-100 shadow-sm">Fix vh units, thanks.</a>
+    <a href="./" class="btn btn-primary w-100 shadow-sm">Use native vh units.</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">Blog (demo button)</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">About (demo button)</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">Contact (demo button)</a>
