Change active styling and default selected chapter

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <nav id="main-navigation" class="bg-light">
     <a href="./vh-fix" class="btn btn-primary w-100 shadow-sm">Fix vh units, thanks.</a>
-    <a href="./" class="btn btn-primary w-100 shadow-sm">Use native vh units.</a>
+    <a href="./" class="btn btn-primary active w-100 shadow-sm">Use native vh units.</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">Blog (demo button)</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">About (demo button)</a>
     <a href="#" class="btn btn-primary w-100 shadow-sm">Contact (demo button)</a>
@@ -27,7 +27,7 @@
   </nav>
 
   <nav id="navigation-slider" class="bg-light p-0">
-    <a href="#" class="navigation-slider-item btn btn-primary --selected w-100 px-0">Ch. 1</a>
+    <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 1</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 2</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 3</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 4</a>
@@ -56,7 +56,7 @@
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 27</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 28</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 29</a>
-    <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 30</a>
+    <a href="#" class="navigation-slider-item btn btn-primary --selected w-100 px-0">Ch. 30</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 31</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 32</a>
     <a href="#" class="navigation-slider-item btn btn-secondary w-100 px-0">Ch. 33</a>
